<resources>
    <string name="app_name">File Explorer</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="pref_key_theme">pref_key_theme</string>
    <string name="menu_item_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="choose_application_theme">Choose App Theme</string>
    <string name="choose_text_color">Choose Text Color</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="new_folder">New Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="text_format">Text Format</string>
    <string name="edit">Edit</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="app_theme">App Theme</string>
    <string name="new_file">New File</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="create_file">Create File</string>
    <string name="folder_created">Folder Created</string>
    <string name="file_created">File Created</string>
    <string name="provide_valid__name">Please provide a valid name</string>
    <string name="couldnt_open_file">Couldn\'t open file</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="search">Search</string>
    <string name="show_hidden_files">Show Hidden Files</string>
    <string name="selected">Selected</string>
    <string name="delete">Delete</string>
    <string name="pref_key_file_view">FileView</string>
    <string name="file_view">File View</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="confirm_delete">Do you really want to delete selected files?</string>
    <string name="files_deleted">Files Deleted</string>
    <string name="send_files">Send Files</string>
    <string name="file_details">File Details</string>
    <string name="file_name">File Name</string>
    <string name="file_path">File Path</string>
    <string name="file_type">File Type</string>
    <string name="last_modified">Last Modified</string>
    <string name="file_size">File Size</string>
    <string name="share">Share</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
</resources>
