<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_share" android:title="@string/share"
        android:icon="@drawable/ic_share_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_delete" android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_info" android:title="@string/file_details"
        android:icon="@drawable/ic_info_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_rename" android:title="@string/rename"
        android:icon="@drawable/ic_edit_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_cut" android:title="@string/cut"
        android:icon="@drawable/ic_content_cut_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_copy" android:title="@string/copy"
        android:icon="@drawable/ic_content_copy_black_24dp" app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_paste" android:title="@string/paste"
        android:icon="@drawable/ic_content_paste_black_24dp" app:showAsAction="ifRoom"/>
</menu>