<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">
    <TextView android:id="@+id/file_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_details"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="?attr/colorPrimary"/>
    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_details_title"
        app:columnCount="2">
        <TextView android:text="@string/file_name"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />
        <TextView android:id="@+id/tx_file_name" android:text="@string/file_name"
            android:textSize="20sp"/>
        <TextView android:text="@string/file_type"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <TextView android:id="@+id/tx_file_type" android:text="@string/file_type"
            android:textSize="20sp"/>
        <TextView android:text="@string/file_path"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <TextView android:id="@+id/tx_file_path" android:text="@string/file_size"
            android:textSize="20sp"/>
        <TextView android:text="@string/file_size"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <TextView android:id="@+id/tx_file_size" android:text="@string/last_modified"
            android:textSize="20sp"/>
        <TextView android:text="@string/last_modified"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <TextView android:id="@+id/tx_last_modified" android:text="@string/last_modified"
            android:textSize="20sp"/>
    </androidx.gridlayout.widget.GridLayout>
</android.support.constraint.ConstraintLayout>